# EHR-Copilot

./: .env.example  .gitignore  Dockerfile  MARL_PLAN.md  Makefile  PROJECT_JOURNAL.md  README.md  REPRODUCE.md  RESULTS.md  docker-compose.yml  literature_review.md  paper_draft.md  paper_ieee.md  pyproject.toml
config/: logging.yaml  models.yaml  settings.test.yaml  settings.yaml
hpc/: setup_env.sh  slurm_collect_trajectories.sh  slurm_eval_comparison.sh  slurm_eval_embeddings.sh  slurm_eval_full_pipeline.sh  slurm_eval_mad_base.sh  slurm_eval_mad_grpo.sh  slurm_eval_marl_c3v2.sh  slurm_eval_marl_full.sh  slurm_eval_medhallu.sh  slurm_eval_single_critic.sh  slurm_finetune_embeddings.sh  slurm_generate_trajectories.sh  slurm_grpo_v3.sh  slurm_marl_c3.sh  slurm_marl_c3_v2.sh  slurm_marl_full_trial.sh  slurm_marl_v2.sh  slurm_serve_vllm.sh  slurm_setup_env.sh  slurm_test_mad.sh  slurm_train_grpo.sh  slurm_train_grpo_v2.sh  slurm_train_marl.sh
notebooks/: critic_dpo_training.ipynb
results/: e2e_test.json  eval_results.json  eval_results_10patients.json  eval_results_10patients_merged.json  eval_results_10patients_rag.json  eval_results_10patients_verified.json  eval_results_improved.json  eval_results_minimax_m25.json  eval_results_sonnet45.json  ground_truth_eval.json  multi_model_benchmark.json  multi_model_benchmark_10patients.json
scripts/: collect_pipeline_trajectories.py  download_models.sh  eval_embeddings.py  eval_full_comparison.py  eval_marl_c3v2_1k.py  eval_marl_c3v2_full_pipeline.py  eval_medhallu_detection.py  finetune_embeddings.py  generate_charts.py  generate_dpo_pairs.py  generate_synthea.sh  (+19 more)
(+101 files in other folders)
