[project]
name = "ehr-copilot"
version = "0.1.0"
description = "Patient Scoped EHR Copilot with Verifiable Evidence"
readme = {text = "Patient Scoped EHR Copilot with Verifiable Evidence", content-type = "text/plain"}
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "EHR Copilot Team" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",
    "fhir.resources>=7.1.0",
    "faiss-cpu>=1.8.0",
    "bm25s[full]>=0.2.0",
    "sentence-transformers>=3.0.0",
    "ollama>=0.3.0",
    "rapidfuzz>=3.9.0",
    "aiosqlite>=0.20.0",
    "streamlit>=1.38.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "pint>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ehr_copilot"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "evaluation: marks tests as evaluation tests",
]
